<resources>
    <string name="app_name">MaketXD</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="textview1">TextView</string>
    <string name="name6">Name</string>
    <string name="name7">Name</string>
    <string name="name8">Name</string>
    <string name="name9">Name</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="name16">Name</string>
    <string name="name17">Name</string>
    <string name="name18">Name</string>
    <string name="todo19">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo32">TODO</string>
    <string name="todo33">TODO</string>
    <string name="todo34">TODO</string>
    <string name="todo35">TODO</string>
    <string name="todo36">TODO</string>
    <string name="todo37">TODO</string>
    <string name="todo38">TODO</string>
    <string name="todo39">TODO</string>
    <string name="todo40">TODO</string>
    <string name="todo41">TODO</string>
</resources>