<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroudstyle"
    tools:context=".MaketXD2">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginLeft="3dp"
        android:background="#9F9B9B"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo1"
            android:onClick="Home"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/contact" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/photo_camera" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo4"
            android:onClick="Gallery"
            app:srcCompat="@drawable/gallery" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo5"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="566dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo5"
                tools:srcCompat="@drawable/avatar_1" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo6"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo1"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo7"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo5"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo1"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:text="@string/name6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="62dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/edit_button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>